[PAN-3064] sweep state roots before child nodes (#1854)
* sweep state roots before child nodes

* Adds long removeAccountStateTrieNode(key) method to WorldStateStorage.Updater

* remove assertj assertions from `AbstractKeyValueStorageTest`
Signed-off-by: Adrian Sutton <adrian.sutton@consensys.net>